--- a/src/app/page/edit/edit-product/edit-product.component.html
+++ b/src/app/page/edit/edit-product/edit-product.component.html
@@ -2,36 +2,36 @@
   <div *ngIf="product" class="col-6 offset-3 mt-5">
     <form #productForm="ngForm" (ngSubmit)="setProductToDatabase(product)">
       <div class="form-group">
-        <label for="">Név:</label>
-        <input name="name" [(ngModel)]="product.name" type="text" class="form-control" required autofocus>
+        <label for="name">Név:</label>
+        <input name="name" [(ngModel)]="product.name" type="text" class="form-control" id="name" required autofocus>
         <div [hidden]="productForm.controls.name?.valid || productForm.controls.name?.pristine" class="error-message">
           Hiányzó név!
         </div>
       </div>
       <div class="form-group">
-        <label for="">Típus:</label>
-        <input name="type" [(ngModel)]="product.type" type="text" class="form-control" required>
+        <label for="type">Típus:</label>
+        <input name="type" id="type" [(ngModel)]="product.type" type="text" class="form-control" required>
         <div [hidden]="productForm.controls.type?.valid || productForm.controls.type?.pristine" class="error-message">
           Hiányzó típus!
         </div>
       </div>
       <div class="form-group">
-        <label for="">Kategória ID:</label>
-        <input name="catId" [(ngModel)]="product.catId" type="number" class="form-control" required>
-        <div [hidden]="productForm.controls.catId?.valid || productForm.controls.catId?.pristine" class="error-message">
-          Hiányzó kategória ID!
-        </div>
+        <label for="catId">Kategória ID:</label>
+        <select class="form-control" name="catId" id="catId" [(ngModel)]="product.catId">
+          <option>1</option>
+          <option>2</option>
+        </select>
       </div>
       <div class="form-group">
-        <label for="">Leírás:</label>
-        <input name="description" [(ngModel)]="product.description" type="text" class="form-control" required>
+        <label for="description">Leírás:</label>
+        <textarea name="description" id="description" rows="2" class="form-control" [(ngModel)]="product.description" required></textarea>
         <div [hidden]="productForm.controls.description?.valid || productForm.controls.description?.pristine" class="error-message">
           Hiányzó leírás!
         </div>
       </div>
       <div class="form-group">
-        <label for="">Ár:</label>
-        <input name="price" [(ngModel)]="product.price" type="number" class="form-control" required>
+        <label for="price">Ár:</label>
+        <input name="price" id="price" [(ngModel)]="product.price" type="number" class="form-control" required>
         <div [hidden]="productForm.controls.price?.valid || productForm.controls.price?.pristine" class="error-message">
           Hiányzó ár!
         </div>
@@ -53,8 +53,8 @@
         </label>
       </div>
       <div class="form-group">
-        <label for="">Kép (opcionális):</label>
-        <input name="image" [(ngModel)]="product.image" type="text" class="form-control">
+        <label for="image">Kép (opcionális):</label>
+        <input name="image" id="image" [(ngModel)]="product.image" type="text" class="form-control">
       </div>
       <button [disabled]="productForm.invalid || updating" type="submit" class="btn btn-primary btn-block btn-lg">
         <i *ngIf="!updating" class="material-icons">save</i>
