--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -5,7 +5,7 @@
         </div>
 
         <div class="col-12 my-3 mb-3">
-            <button class="btn btn-primary btn-block" [routerLink]="[0]">
+            <button class="btn btn-success btn-block" [routerLink]="[0]">
         <i class="material-icons">edit</i>
                 Új tétel létrehozása
             </button>
