--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -19,7 +19,7 @@
   <div class="search-bar">
     <form class="form-inline mx-auto d-flex justify-content-end">
         <input (keyup)='onChangePhrase($event)' class="form-control mr-sm-2" type="text" placeholder="Keresés">
-        <button class="btn btn-warning mt-4 my-sm-0" type="button"> <i class="fa fa-search"></i>
+        <button class="btn btn-success mt-4 my-sm-0" type="button"> <i class="fa fa-search"></i>
             Keresés</button>
     </form>
 </div>
