--- a/src/app/widget/sidebar/sidebar.component.html
+++ b/src/app/widget/sidebar/sidebar.component.html
@@ -2,31 +2,31 @@
   <div class="logo"><a routerLink="/" class="simple-text logo-normal">Filmes webshop</a></div>
   <div class="sidebar-wrapper">
     <ul class="nav">
-      <li class="nav-item active  ">
+      <li class="nav-item active" (click)=setActive($event)>
         <a class="nav-link" routerLink="/">
           <i class="material-icons">dashboard</i>
           <p>Irányítópult</p>
         </a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item" (click)=setActive($event)>
         <a class="nav-link" routerLink="products">
           <i class="material-icons">cases</i>
           <p>Termékek</p>
         </a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item" (click)=setActive($event)>
         <a class="nav-link" routerLink="orders">
           <i class="material-icons">shopping_cart</i>
           <p>Rendelések</p>
         </a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item" (click)=setActive($event)>
         <a class="nav-link" routerLink="customers">
           <i class="material-icons">people_alt</i>
           <p>Vásárlók</p>
         </a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item" (click)=setActive($event)>
         <a class="nav-link" routerLink="bills">
           <i class="material-icons">sell</i>
           <p>Számlák</p>
