--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -9,41 +9,32 @@
        ÚJ RENDELÉS
       </button>
     </div>
-    <div class="col-3">Kategóriák
-          <select [(ngModel)]="filterKey" class="form-control">
+    <div class="col-4">Kategóriák
+          <select [(ngModel)]="filterKey" class="mb-5 form-control">
           <option *ngFor="let key of filterKeys" [value]="key">
             {{ key }}
         </option>
     </select>
   </div>
-  <div class="search-bar">
+  <div class="col-6 mt-4 search-bar">
     <form class="form-inline mx-auto d-flex justify-content-end">
         <input (keyup)='onChangePhrase($event)' class="form-control mr-sm-2" type="text" placeholder="Keresés">
-        <button class="btn btn-success mt-4 my-sm-0" type="button"> <i class="fa fa-search"></i>
+        <button class="btn btn-success mt-4 my-sm-0" type="button"> <i class="material-icons">manage_search</i>
             Keresés</button>
     </form>
 </div>
     <table class="table table-striped">
-      <thead class="bg-secondary text-light">
+      <thead class="mat-sort-header bg-dark text-light">
         <tr>
           <!-- <th *ngFor="let col of cols">{{ col.text }}</th> -->
-          <th (click)="onColumnSelect('id')">#<i *ngIf="!irany" class="material-icons">keyboard_arrow_up</i>
-            <i *ngIf="irany" class="material-icons">keyboard_arrow_down</i></th>
-
-          <th (click)="onColumnSelect('id')">Customer ID<i *ngIf="!irany" class="material-icons">keyboard_arrow_up</i>
-            <i *ngIf="irany" class="material-icons">keyboard_arrow_down</i></th>
-
-           <th (click)="onColumnSelect('id')">Product ID<i *ngIf="!irany" class="material-icons">keyboard_arrow_up</i>
-            <i *ngIf="irany" class="material-icons">keyboard_arrow_down</i></th>
-
-           <th (click)="onColumnSelect('id')">Amount<i *ngIf="!irany" class="material-icons">keyboard_arrow_up</i>
-            <i *ngIf="irany" class="material-icons">keyboard_arrow_down</i></th>
-
-           <th (click)="onColumnSelect('id')">Status<i *ngIf="!irany" class="material-icons">keyboard_arrow_up</i>
-            <i *ngIf="irany" class="material-icons">keyboard_arrow_down</i></th>
-           <!-- <th><i *ngIf="!irany" class="material-icons">keyboard_arrow_up</i>
-            <i *ngIf="irany" class="material-icons">keyboard_arrow_down</i>
-                        </th> -->
+          <th (click)="onColumnSelect('id')">#</th>
+          <th (click)="onColumnSelect('id')">Customer ID</th>
+           <th (click)="onColumnSelect('id')">Product ID</th>
+           <th (click)="onColumnSelect('id')">Amount</th>
+           <th (click)="onColumnSelect('id')">Status</th>
+           <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
+            <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
+                        </th>
           <th></th>
         </tr>
       </thead>
