category list filter sort

--- a/src/app/pages/list-category/list-category.component.html
+++ b/src/app/pages/list-category/list-category.component.html
@@ -34,7 +34,7 @@
               </thead>
 
               <tbody>
-                <tr *ngFor="let category of categoryList$ | async | filter:filterPhrase:filterKey ">
+                <tr *ngFor="let category of categoryList$ | async | filter:filterPhrase:filterKey | sorter:sortby:sorterDirection">
                   <td>{{ category.id }}</td>
                   <td>{{ category.name }}</td>
                   <td>{{ category.description }}</td>
