--- a/src/app/page/listing/listing-bill/listing-bill.component.html
+++ b/src/app/page/listing/listing-bill/listing-bill.component.html
@@ -1,18 +1,18 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <h3 class="text-center mb-5 mt-5">Bills</h3>
+            <h2 class="text-center mb-5 mt-3 font-weight-bold">Számlák</h2>
         </div>
 
-        <div class="col-12">
-            <button class="btn btn-success btn-block" [routerLink]="[0]">
+        <div class="col-12 d-flex justify-content-center my-3">
+            <button class="btn btn-success btn-block font-weight-bold" [routerLink]="[0]">
                 <i class="material-icons">add</i>
-                Create a New Bill
+                Új számla létrehozása
             </button>
         </div>
 
-        <div class="col-4 text-center">Select bill
-            <select [(ngModel)]="filterKey" class=" mb-5  form-control">
+        <div class="col-4 text-center font-weight-bold">Kiválasztás
+            <select [(ngModel)]="filterKey" class="custom-select mb-3">
                 <option *ngFor="let key of filterKeys" [value]="key">
                     {{ key }}
                 </option>
@@ -20,22 +20,20 @@
         </div>
 
         <div class="col-6 mt-4 search-bar">
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" (keyup)="onChangePhrase($event)">
-                <button class="btn btn-outline-success mt-4 my-2 my-sm-0" type="submit">
-                    Search</button>
+            <form class="form-inline my-2 my-lg-0 d-flex justify-content-center">
+                <input class="form-control mr-sm-2" type="text" placeholder="Keresés" (keyup)="onChangePhrase($event)">
+                <button class="btn btn-success mt-4 my-2 my-sm-0 font-weight-bold" type="submit">
+                    Keresés</button>
             </form>
         </div>
 
         <table class="table table-striped">
-            <thead class="mat-sort-header">
+            <thead class="thead-dark">
                 <tr>
                     <th (click)="onColumnSelect('id')"> <b>#</b></th>
-                    <th (click)="onColumnSelect('orderID')"><b>Order ID</b></th>
-                    <th (click)="onColumnSelect('amount')"><b>Amount</b></th>
-                    <!-- <th (click)="onColumnSelect('catID')">CatID</th> -->
-                    <th (click)="onColumnSelect('status')"><b>Status</b></th>
-
+                    <th (click)="onColumnSelect('orderID')"><b>Rendelés azonosító</b></th>
+                    <th (click)="onColumnSelect('amount')"><b>Összeg</b></th>
+                    <th (click)="onColumnSelect('status')"><b>Státusz</b></th>
                     <th><i *ngIf="!direction" class="material-icons">north</i>
                         <i *ngIf="direction" class="material-icons">south</i>
                     </th>
@@ -55,7 +53,7 @@
             </thead> -->
             <tbody>
 
-                <tr *ngFor="let bill of billList$ | async | filter:filterKey:phrase | sorter:columnKey">
+                <tr *ngFor="let bill of billList$ | async | filter:filterKey:phrase | sorter:columnKey:sortedOrder">
                     <td>{{bill.id}}</td>
                     <td>{{bill.orderID}} </td>
                     <td>{{bill.amount}}</td>
@@ -63,7 +61,7 @@
                     <td>
                         <div class="btn-group">
                             <button [routerLink]="['bills/' + bill.id]" class="btn btn-info">
-                                <i class="material-icons">add</i>
+                                <i class="material-icons">edit</i>
                             </button>
                             <button (click)="onRemove(bill)" class="btn btn-danger">
                                 <i class="material-icons">delete_outline</i>
