--- a/src/app/pages/list-product/list-product.component.html
+++ b/src/app/pages/list-product/list-product.component.html
@@ -34,7 +34,14 @@
                                         <td>{{ product.featured }}</td>
                                         <td>{{ product.active }}</td>
                                         <td>
-                                            Placeholder for buttons
+                                            <div class="btn-group">
+                                                <button type="button" rel="tooltip" title="szerkesztés" class="btn btn-primary btn-link btn-sm">
+                                                    szerkesztés
+                                                </button>
+                                                <button type="button" rel="tooltip" title="törlés" class="btn btn-danger btn-link btn-sm">
+                                                    törlés
+                                                </button>
+                                            </div>
                                         </td>
                                     </tr>
 
