--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -28,10 +28,10 @@
         <tr>
           <!-- <th *ngFor="let col of cols">{{ col.text }}</th> -->
           <th (click)="onColumnSelect('id')"><b>ID</b></th>
-          <th (click)="onColumnSelect('id')"><b>Customer ID</b></th>
-           <th (click)="onColumnSelect('id')"><b>Product ID</b></th>
-           <th (click)="onColumnSelect('id')"><b>Amount</b></th>
-           <th (click)="onColumnSelect('id')"><b>Status</b></th>
+          <th (click)="onColumnSelect('customerID')"><b>Customer ID</b></th>
+           <th (click)="onColumnSelect('productID')"><b>Product ID</b></th>
+           <th (click)="onColumnSelect('amount')"><b>Amount</b></th>
+           <th (click)="onColumnSelect('status')"><b>Status</b></th>
            <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
               <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
             </th>
