--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -25,16 +25,25 @@
                         <div class="table-responsive">
                             <table class="table">
                                 <thead class="text-primary">
-                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder" (click)="onColumnSelect(attribute.key)">
+                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder"
+                                        (click)="onColumnSelect(attribute.key)">
                                         {{attribute.value}}
-                                        <span *ngIf="(sortOrder[attribute.key] === 'ascending' )"><i class="fa fa-angle-up"></i></span>
-                                        <span *ngIf="(sortOrder[attribute.key] === 'descending' )"><i class="fa fa-angle-down"></i></span>
+                                        <span *ngIf="(sortOrder[attribute.key] === 'ascending' )"><i
+                                                class="fa fa-angle-up"></i></span>
+                                        <span *ngIf="(sortOrder[attribute.key] === 'descending' )"><i
+                                                class="fa fa-angle-down"></i></span>
                                     </th>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let product of productList$ | async | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
-                                        <td *ngFor="let attribute of attributes | keyvalue:originalOrder">
-                                            {{product[attribute.key]}}</td>
+                                    <tr
+                                        *ngFor="let product of productList$ | async | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
+                                        <ng-container *ngFor="let attribute of attributes | keyvalue:originalOrder">
+                                            <td *ngIf="attribute.key!=='featured' && attribute.key!=='active'">{{product[attribute.key]}}</td>
+                                            <td *ngIf="attribute.key==='featured' && product[attribute.key]">Yes</td>
+                                            <td *ngIf="attribute.key==='featured' && !product[attribute.key]">No</td>
+                                            <td *ngIf="attribute.key==='active' && product[attribute.key]">Yes</td>
+                                            <td *ngIf="attribute.key==='active' && !product[attribute.key]">No</td>
+                                        </ng-container>
                                         <td>
                                             <div class="btn-group">
                                                 <button [routerLink]="['product/' + product.id]" class="btn btn-info">
