--- a/src/app/pages/list-customer/list-customer.component.html
+++ b/src/app/pages/list-customer/list-customer.component.html
@@ -9,14 +9,6 @@
         </select>
         <input [(ngModel)]="filterPhrase" class="form-control mr-sm-2" type="text" placeholder="Filter..." style="width: 300px;">
       </div>
-      <div class="border d-flex p-3 mb-3 bg-light">
-        <div class="filter-header">Rendezés: </div>
-        <div *ngFor="let skey of filterKeys" class="filter-button" (click)="changeOrder(skey)">{{ skey }}</div>
-        <select [(ngModel)]="sorterDirection" class="form-control mr-3" style="width: 200px;">
-            <option value="1">növekvő</option>
-            <option value="2">csökkenő</option>
-        </select>
-      </div>
 
       <div class="card">
         <div class="card-header card-header-primary">
@@ -26,15 +18,19 @@
         <div class="card-body">
           <div class="table-responsive">
             <table class="table">
-
               <thead class=" text-primary">
-                <th>id</th>
-                <th>firstName</th>
-                <th>lastName</th>
-                <th>email</th>
+                <th class="th__active" (click)="changeOrder('id')">id <span class="material-icons md-18">keyboard_arrow_down</span></th>
+                <th class="th__active" (click)="changeOrder('firstName')">firstName <span class="material-icons md-18">keyboard_arrow_down</span></th>
+                <th class="th__active" (click)="changeOrder('lastName')">lastName <span class="material-icons md-18">keyboard_arrow_down</span></th>
+                <th class="th__active" (click)="changeOrder('email')">email <span class="material-icons md-18">keyboard_arrow_down</span></th>
                 <th>address</th>
-                <th>active</th>
-                <th>actions</th>
+                <th class="th__active" (click)="changeOrder('active')">active <span class="material-icons md-18">keyboard_arrow_down</span></th>
+                <th class="th__action">
+                  <select [(ngModel)]="sorterDirection" class="form-control mr-3">
+                    <option value="1">növekvő</option>
+                    <option value="2">csökkenő</option>
+                  </select>
+                </th>
               </thead>
 
               <tbody>
