--- a/src/app/pages/list-customer/list-customer.component.scss
+++ b/src/app/pages/list-customer/list-customer.component.scss
@@ -27,3 +27,23 @@
         margin: 0 .2rem;
     }
 }
+
+.th {
+
+    &__active {
+        cursor: pointer;
+
+        &:hover {
+            border-bottom: 1px solid rgba(175, 1, 131, 1);
+        }
+    }
+
+    &__action {
+        width: 10em;
+    }
+}
+
+.material-icons.md-18 {
+    font-size: 18px;
+    transform: translateY(5px);
+}
