--- a/src/app/pages/list-order/list-order.component.html
+++ b/src/app/pages/list-order/list-order.component.html
@@ -1,5 +1,14 @@
 <div class="container">
   <div class="row">
+    <div class="col-2 offset-5">
+      <form class="navbar-form">
+        <div class="input-group no-border">
+          <input (keyup)="onChangePhrase($event)" type="text" value="" class="form-control" placeholder="Filter by Status...">
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="row">
     <div class="col-md-12">
       <div class="card">
         <div class="card-header card-header-primary">
@@ -20,7 +29,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let order of orderList$ | async">
+          <tr *ngFor="let order of orderList$ | async | filter:phrase:'status'">
             <td>{{order.id}}</td>
             <td>{{order.customerID}}</td>
             <td>{{order.productID}}</td>
@@ -28,11 +37,11 @@
             <td>{{order.status}}</td>
             <td>
               <div class="btn-group">
-                <button type="button" rel="tooltip" title="" class="btn btn-primary btn-link btn-sm">
+                <button type="button" rel="tooltip" title="Edit Order" class="btn btn-info btn-link btn-sm">
                   <i class="material-icons">edit</i>
                 </button>
-                <button type="button" rel="tooltip" title="" class="btn btn-primary btn-link btn-sm">
-                  <i class="material-icons">delete</i>
+                <button type="button" rel="tooltip" title="Delete Order" class="btn btn-danger btn-link btn-sm">
+                  <i class="material-icons">close</i>
                 </button>
 
               </div>
