--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -9,7 +9,7 @@
                 Új tétel létrehozása
             </button>
         </div>
-     <div class="d-flex justify-content-center col-12 my-3">
+  <div class="d-flex justify-content-center col-12 my-3">
             <div class="mr-5">
                 <select [(ngModel)]="filterKey" class="form-control">
                     <option *ngFor="let key of filterKeys" [value]="key">
@@ -38,7 +38,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let product of productList | async | filter:phrase:filterKey | sorter:sortedColumn:sortedOrder">
+                <tr *ngFor="let product of productList | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder">
                     <td>
                         <span>{{ product.id }}</span>
                     </td>
