--- a/src/app/pages/customer-list/customer-list.component.html
+++ b/src/app/pages/customer-list/customer-list.component.html
@@ -32,6 +32,7 @@
                                         <span *ngIf="attribute.value.order === 'ascending'"  class="material-icons"><i class="fa fa-angle-up"></i></span>
                                         <span *ngIf="attribute.value.order === 'descending'" class="material-icons"><i class="fa fa-angle-down"></i></span>
                                     </th>
+                                    <th>Buttons</th>
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let customer of customerList$ | async | filter:phrase:filterKey:filterSubKey | sorter:sorterKey:sortDirection:sorterSubKey">
@@ -41,7 +42,7 @@
                                             <span *ngIf="attribute.value.type==='check' && customer[attribute.key]" class="material-icons">check</span>
                                         </td>
                                         <td>
-                                            <div class="btn-group">
+                                            <div class="btn-group special">
                                                 <button [routerLink]="['/customer', customer.id]" class="btn btn-info">
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
