--- a/src/app/pages/list-customer/list-customer.component.html
+++ b/src/app/pages/list-customer/list-customer.component.html
@@ -1,36 +1,27 @@
 <div class="row">
     <div class="col-md-10 offset-1">
-
-      
-      <div class="border d-flex p-3 mb-3 bg-light">
-        <div class="filter-header">Szűrés: </div>
-        <select [(ngModel)]="filterKey" class="form-control mr-3" style="width: 200px;">
-            <option *ngFor="let fkey of filterKeys" [value]="fkey">{{ fkey }}</option>
-        </select>
-        <input [(ngModel)]="filterPhrase" class="form-control mr-sm-2" type="text" placeholder="Filter..." style="width: 300px;">
-      </div>
-
       <div class="card">
         <div class="card-header card-header-primary">
           <h4 class="card-title ">Customer Table</h4>
           <p class="card-category"> This is the Customer list</p>
+          <div class="d-flex p-2 mb-3 filter__group">
+            <input [(ngModel)]="filterPhrase" class="form-control mr-sm-2 filter__input px-3" type="text" placeholder="Filter..." style="width: 200px;">
+            <select [(ngModel)]="filterKey" class="form-control mr-3 filter__select px-3" style="width: 150px;">
+                <option *ngFor="let fkey of filterKeys" [value]="fkey">{{ fkey }}</option>
+            </select>
+          </div>
         </div>
         <div class="card-body">
           <div class="table-responsive">
             <table class="table">
               <thead class=" text-primary">
-                <th class="th__active" (click)="changeOrder('id')">id <span class="material-icons md-18">keyboard_arrow_down</span></th>
-                <th class="th__active" (click)="changeOrder('firstName')">firstName <span class="material-icons md-18">keyboard_arrow_down</span></th>
-                <th class="th__active" (click)="changeOrder('lastName')">lastName <span class="material-icons md-18">keyboard_arrow_down</span></th>
-                <th class="th__active" (click)="changeOrder('email')">email <span class="material-icons md-18">keyboard_arrow_down</span></th>
-                <th>address</th>
-                <th class="th__active" (click)="changeOrder('active')">active <span class="material-icons md-18">keyboard_arrow_down</span></th>
-                <th class="th__action">
-                  <select [(ngModel)]="sorterDirection" class="form-control mr-3">
-                    <option value="1">növekvő</option>
-                    <option value="2">csökkenő</option>
-                  </select>
+                <th *ngFor="let fkey of filterKeys" class="th__active" (click)="changeOrder(fkey)">
+                  {{ fkey }} 
+                  <span [id]="'arrow_up_'+fkey" class="arrow material-icons md-18 arrow__active">keyboard_arrow_up</span>
+                  <span [id]="'arrow_down_'+fkey" class="arrow material-icons md-18">keyboard_arrow_down</span>
                 </th>
+                
+                <th>actions</th>
               </thead>
 
               <tbody>
