--- a/src/app/pages/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list.component.html
@@ -13,11 +13,15 @@
                         </button>
                     </div>
                     <div class="card-body col-6 d-flex">
-                        <input name="phrase" (keyup)="onChangePhrase($event)" class="form-control" type="text"
+                        <input name="phrase" (keyup)="onChangePhrase($event)"
+                            class="form-control" type="text"
                             placeholder="Enter filtering phrase...">
-                        <select class="custom-select ml-2" (change)="onChangeKey($event)">
-                            <option *ngFor="let attribute of attributes | keyvalue:originalOrder"
-                                [value]="attribute.key" [selected]="setDefault(attribute.key)">Filter by
+                        <select class="custom-select ml-2"
+                            (change)="onChangeKey($event)">
+                            <option
+                                *ngFor="let attribute of attributes | keyvalue:originalOrder"
+                                [value]="attribute.key"
+                                [selected]="setDefault(attribute.key)">Filter by
                                 {{attribute.value}}</option>
                         </select>
                     </div>
@@ -25,22 +29,31 @@
                         <div class="table-responsive">
                             <table class="table">
                                 <thead class="text-primary">
-                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder" (click)="onColumnSelect(attribute.key)">
+                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder"
+                                        (click)="onColumnSelect(attribute.key)">
                                         {{attribute.value}}
-                                        <span *ngIf="(sortOrder[attribute.key] === 'ascending' )"><i class="fa fa-angle-up"></i></span>
-                                        <span *ngIf="(sortOrder[attribute.key] === 'descending' )"><i class="fa fa-angle-down"></i></span>
+                                        <span
+                                            *ngIf="(sortOrder[attribute.key] === 'ascending' )"><i
+                                                class="fa fa-angle-up"></i></span>
+                                        <span
+                                            *ngIf="(sortOrder[attribute.key] === 'descending' )"><i
+                                                class="fa fa-angle-down"></i></span>
                                     </th>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let bill of billList$ | async | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
-                                        <td *ngFor="let attribute of attributes | keyvalue:originalOrder">
+                                    <tr
+                                        *ngFor="let bill of billList$ | async | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
+                                        <td
+                                            *ngFor="let attribute of attributes | keyvalue:originalOrder">
                                             {{ bill[attribute.key] }}</td>
                                         <td>
                                             <div class="btn-group">
-                                                <button [routerLink]="" class="btn btn-info">
+                                                <button [routerLink]=""
+                                                    class="btn btn-info">
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
-                                                <button class="btn btn-danger" (click)="onDelete(bill)">
+                                                <button class="btn btn-danger"
+                                                    (click)="onDelete(bill)">
                                                     <i class="fa fa-trash"></i>
                                                 </button>
                                             </div>
