--- a/src/app/widget/sidebar/sidebar.component.html
+++ b/src/app/widget/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
       <li class="nav-item active" (click)=setActive($event)>
         <a class="nav-link" routerLink="/">
           <i class="material-icons">dashboard</i>
-          <p>Irányítópult</p>
+          <p>Dashboard</p>
         </a>
       </li>
       <li class="nav-item" (click)=setActive($event)>
@@ -15,21 +15,21 @@
         </a>
       </li>
       <li class="nav-item" (click)=setActive($event)>
-        <a class="nav-link" routerLink="orders">
-          <i class="material-icons">shopping_cart</i>
-          <p>Rendelések</p>
-        </a>
-      </li>
-      <li class="nav-item" (click)=setActive($event)>
         <a class="nav-link" routerLink="customers">
           <i class="material-icons">people_alt</i>
           <p>Vásárlók</p>
         </a>
       </li>
       <li class="nav-item" (click)=setActive($event)>
+        <a class="nav-link" routerLink="orders">
+          <i class="material-icons">shopping_cart</i>
+          <p>Rendelések</p>
+        </a>
+      </li>
+      <li class="nav-item" (click)=setActive($event)>
         <a class="nav-link" routerLink="bills">
-          <i class="material-icons">sell</i>
-          <p>Számlák</p>
+          <i class="material-icons">euro</i>
+          <p>Pénztár</p>
         </a>
       </li>
     </ul>
