--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -54,8 +54,8 @@
                     <td>{{product.catId}}</td>
                     <td>{{product.description}}</td>
                     <td>{{product.price}}</td>
-                    <td>{{product.featured}}</td>
-                    <td>{{product.active}}</td>
+                    <td><input class="form-control form-control-sm" [(ngModel)]="product.featured" type="checkbox"></td>
+                    <td><input class="form-control form-control-sm" [(ngModel)]="product.active" type="checkbox"></td>
                     <td>
                         <div class="btn-group">
                             <button [routerLink]="[product.id]" class="btn btn-info">
