--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -38,7 +38,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let order of orderList$ | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder">
+        <tr *ngFor="let order of orderList$ | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder | orderBindings">
           <td>{{ order.id }}</td>
           <td>{{ order.customerID }}</td>
           <td>{{ order.productID }}</td>
