--- a/src/app/page/edit/edit-order/edit-order.component.html
+++ b/src/app/page/edit/edit-order/edit-order.component.html
@@ -4,7 +4,7 @@
       <div class="form-group">
         <label for="customer">customerID</label>
 
-        <!-- <input
+        <input
           [(ngModel)]="order.customerID"
           id="customer"
           name="customer"
@@ -12,8 +12,8 @@
           class="form-control"
           required
           autofocus
-        /> -->
-
+        />
+        <!-- itt a mezők üresen maradnak -->
         <!-- <input
           id="customerID"
           type="string"
@@ -25,7 +25,8 @@
           [inputFormatter]="customerIputFormatter"
           #instance="ngbTypeahead"
         /> -->
-        <input
+        <!-- ez részlegesen működik, de a customer mező üresen marad  -->
+        <!-- <input
           id="customerID"
           type="string"
           name="customerID"
@@ -36,7 +37,7 @@
           [resultFormatter]="customerResultFormatter"
           [inputFormatter]="customerIputFormatter"
           #instance="ngbTypeahead"
-        />
+        /> -->
 
         <div
           [hidden]="
