--- a/src/app/editors/edit-product/edit-product.component.html
+++ b/src/app/editors/edit-product/edit-product.component.html
@@ -32,7 +32,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="catID">{{attributes.catID}}</label>
-                                    <input name="catID" [(ngModel)]="product.catID" type="text" class="form-control"
+                                    <input name="catID" [(ngModel)]="product.catID" type="number" class="form-control"
                                         pattern="[1-5]" required>
                                     <div [hidden]="productForm.controls.catID?.valid || productForm.controls.catID?.pristine"
                                         class="error-message">
@@ -50,7 +50,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="price">{{attributes.price}}</label>
-                                    <input name="price" [(ngModel)]="product.price" type="text" class="form-control"
+                                    <input name="price" [(ngModel)]="product.price" type="number" class="form-control"
                                         pattern="[1-9][0-9]*" required>
                                     <div [hidden]="productForm.controls.price?.valid || productForm.controls.price?.pristine"
                                         class="error-message">
