--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -36,8 +36,7 @@
                     <th (click)="onColumnSelect('price')"><b>Ár</b></th>
                     <th (click)="onColumnSelect('featured')"><b>Kiemelt</b></th>
                     <th (click)="onColumnSelect('active')"><b>Aktív</b></th>
-                    
-                    
+                    <th (click)="onColumnSelect('operations')"><b>Műveletek</b></th>
                      <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
               <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
             </th>
@@ -56,7 +55,7 @@
                     <td>{{product.price}}</td>
                     <td><input class="form-control form-control-sm" [(ngModel)]="product.featured" type="checkbox"></td>
                     <td><input class="form-control form-control-sm" [(ngModel)]="product.active" type="checkbox"></td>
-                    <td>
+                    <td>{{product.operations}}
                         <div class="btn-group">
                             <button [routerLink]="[product.id]" class="btn btn-info">
                                 <i class="fa fa-pencil"></i>
@@ -66,6 +65,7 @@
                             </button>
                         </div>
                     </td>
+                    <td></td>
                 </tr>
             </tbody>
         </table>
