--- a/src/app/page/listing/listing-bill/listing-bill.component.html
+++ b/src/app/page/listing/listing-bill/listing-bill.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <h2 class="text-center mb-5 mt-3 font-weight-bold">Számlák</h2>
+            <h2 class="text-center mb-5 mt-3 font-weight-bold">Pénztár</h2>
         </div>
 
         <div class="col-12 d-flex justify-content-center my-3">
